Fixed alignment

--- a/client/src/Components/Navbar/Navbar.scss
+++ b/client/src/Components/Navbar/Navbar.scss
@@ -226,6 +226,7 @@ $speed: 500ms;
 .modal-content {
   height: 75%;
   padding-top: 0px;
+  width: 110% !important;
 }
 .modal {
   width: 90%;
